macro/src/snapshots/rust_sitter_macro__tests__struct_extra.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[rust_sitter::grammar(\"test\")] mod grammar\n    {\n        #[rust_sitter::language] pub enum Expression\n        {\n            Number(#[rust_sitter::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] i32,),\n        } #[rust_sitter::extra] struct Whitespace\n        { #[rust_sitter::leaf(pattern = r\"\\s\")] _whitespace: (), }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub enum Expression {
        Number(i32),
    }
    impl ::rust_sitter::Extract<Expression> for Expression {
        type LeafFn = ();
        #[cfg(feature = "pure-rust")]
        const GRAMMAR_NAME: &'static str = GRAMMAR_NAME;
        #[allow(non_snake_case)]
        #[cfg(not(feature = "pure-rust"))]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            fn unwrap_hidden_rules(
                node: ::rust_sitter::tree_sitter::Node,
            ) -> ::rust_sitter::tree_sitter::Node {
                if (node.kind().starts_with('_') || node.child_count() == 1)
                    && node.child_count() > 0
                {
                    if let Some(child) = node.child(0) {
                        return unwrap_hidden_rules(child);
                    }
                }
                node
            }
            let unwrapped_node = unwrap_hidden_rules(node);
            if unwrapped_node.kind() == stringify!(Expression) && unwrapped_node.child_count() == 1
            {
                let child = unwrapped_node.child(0);
                return Self::extract(child, source, _last_idx, _leaf_fn);
            }
            let child_node = unwrapped_node;
            if child_node.kind() == "Expression_Number" {
                return ::rust_sitter::__private::extract_struct_or_variant(
                    node,
                    move |cursor, last_idx| {
                        Expression::Number({
                            ::rust_sitter::__private::extract_field::<i32, _>(
                                cursor, source, last_idx, "0", None,
                            )
                        })
                    },
                );
            }
            panic ! ("Could not determine enum variant from tree structure: node kind='{}', child_count={}" , unwrapped_node . kind () , unwrapped_node . child_count ())
        }
        #[allow(non_snake_case)]
        #[cfg(feature = "pure-rust")]
        fn extract(
            node: Option<&::rust_sitter::pure_parser::ParsedNode>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            fn unwrap_hidden_rules<'a>(
                node: &'a ::rust_sitter::pure_parser::ParsedNode,
            ) -> &'a ::rust_sitter::pure_parser::ParsedNode {
                if (node.kind().starts_with('_') || node.children.len() == 1)
                    && node.children.len() > 0
                {
                    return unwrap_hidden_rules(&node.children[0]);
                }
                node
            }
            let unwrapped_node = unwrap_hidden_rules(node);
            if unwrapped_node.kind() == stringify!(Expression) && unwrapped_node.children.len() == 1
            {
                let child_node = &unwrapped_node.children[0];
                return Self::extract(Some(child_node), source, _last_idx, _leaf_fn);
            }
            let node = unwrapped_node;
            if node.kind() == "Expression_Number" {
                return {
                    let value = <rust_sitter::WithLeaf<i32> as ::rust_sitter::Extract<_>>::extract(
                        Some(node),
                        source,
                        0,
                        Some(&|v| v.parse().unwrap()),
                    );
                    Expression::Number(value)
                };
            }
            if unwrapped_node.children.is_empty() {
                let node = unwrapped_node;
                return {
                    let value = <rust_sitter::WithLeaf<i32> as ::rust_sitter::Extract<_>>::extract(
                        Some(node),
                        source,
                        0,
                        Some(&|v| v.parse().unwrap()),
                    );
                    Expression::Number(value)
                };
            }
            panic ! ("Could not determine enum variant from tree structure: node kind='{}', symbol={}, child_count={}" , unwrapped_node . kind () , unwrapped_node . symbol , unwrapped_node . children . len ())
        }
    }
    struct Whitespace {
        _whitespace: (),
    }
    impl ::rust_sitter::Extract<Whitespace> for Whitespace {
        type LeafFn = ();
        #[cfg(feature = "pure-rust")]
        const GRAMMAR_NAME: &'static str = GRAMMAR_NAME;
        #[allow(non_snake_case)]
        #[cfg(not(feature = "pure-rust"))]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Whitespace {
                    _whitespace: {
                        ::rust_sitter::__private::extract_field::<(), _>(
                            cursor,
                            source,
                            last_idx,
                            "_whitespace",
                            None,
                        )
                    },
                }
            })
        }
        #[allow(non_snake_case)]
        #[cfg(feature = "pure-rust")]
        fn extract(
            node: Option<&::rust_sitter::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Whitespace {
                    _whitespace: {
                        ::rust_sitter::__private::extract_field::<(), _>(
                            cursor,
                            source,
                            last_idx,
                            "_whitespace",
                            None,
                        )
                    },
                }
            })
        }
    }
    #[cfg(not(feature = "pure-rust"))]
    unsafe extern "C" {
        fn tree_sitter_test() -> ::rust_sitter::tree_sitter::Language;
    }
    #[cfg(not(feature = "pure-rust"))]
    pub fn language() -> ::rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[cfg(feature = "pure-rust")]
    include!(concat!(
        env!("OUT_DIR"),
        "/grammar_",
        "test",
        "/parser_",
        "test",
        ".rs"
    ));
    #[cfg(feature = "pure-rust")]
    pub fn language() -> &'static ::rust_sitter::pure_parser::TSLanguage {
        unsafe { &LANGUAGE }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Expression`]"]
    #[doc = r" instance containing the parsed structured data."]
    #[cfg(not(feature = "pure-rust"))]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Expression, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Expression>(input, language)
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Expression`]"]
    #[doc = r" instance containing the parsed structured data."]
    #[cfg(feature = "pure-rust")]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Expression, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Expression>(input, language)
    }
}
