macro/src/snapshots/rust_sitter_macro__tests__struct_optional.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[rust_sitter::grammar(\"test\")] mod grammar\n    {\n        #[rust_sitter::language] pub struct Language\n        {\n            #[rust_sitter::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] v: Option<i32>, t: Option<Number>,\n        } pub struct Number\n        {\n            #[rust_sitter::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] v: i32\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Language {
        v: Option<i32>,
        t: Option<Number>,
    }
    impl ::rust_sitter::Extract<Language> for Language {
        type LeafFn = ();
        #[cfg(feature = "pure-rust")]
        const GRAMMAR_NAME: &'static str = GRAMMAR_NAME;
        #[allow(non_snake_case)]
        #[cfg(not(feature = "pure-rust"))]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Language {
                    v: {
                        ::rust_sitter::__private::extract_field::<
                            Option<rust_sitter::WithLeaf<i32>>,
                            _,
                        >(
                            cursor, source, last_idx, "v", Some(&|v| v.parse().unwrap())
                        )
                    },
                    t: {
                        ::rust_sitter::__private::extract_field::<Option<Number>, _>(
                            cursor, source, last_idx, "t", None,
                        )
                    },
                }
            })
        }
        #[allow(non_snake_case)]
        #[cfg(feature = "pure-rust")]
        fn extract(
            node: Option<&::rust_sitter::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Language {
                    v: {
                        ::rust_sitter::__private::extract_field::<
                            Option<rust_sitter::WithLeaf<i32>>,
                            _,
                        >(
                            cursor, source, last_idx, "v", Some(&|v| v.parse().unwrap())
                        )
                    },
                    t: {
                        ::rust_sitter::__private::extract_field::<Option<Number>, _>(
                            cursor, source, last_idx, "t", None,
                        )
                    },
                }
            })
        }
    }
    pub struct Number {
        v: i32,
    }
    impl ::rust_sitter::Extract<Number> for Number {
        type LeafFn = ();
        #[cfg(feature = "pure-rust")]
        const GRAMMAR_NAME: &'static str = GRAMMAR_NAME;
        #[allow(non_snake_case)]
        #[cfg(not(feature = "pure-rust"))]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Number {
                    v: {
                        ::rust_sitter::__private::extract_field::<rust_sitter::WithLeaf<i32>, _>(
                            cursor,
                            source,
                            last_idx,
                            "v",
                            Some(&|v| v.parse().unwrap()),
                        )
                    },
                }
            })
        }
        #[allow(non_snake_case)]
        #[cfg(feature = "pure-rust")]
        fn extract(
            node: Option<&::rust_sitter::pure_parser::ParsedNode>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Number {
                    v: {
                        ::rust_sitter::__private::extract_field::<rust_sitter::WithLeaf<i32>, _>(
                            cursor,
                            source,
                            last_idx,
                            "v",
                            Some(&|v| v.parse().unwrap()),
                        )
                    },
                }
            })
        }
    }
    #[cfg(not(feature = "pure-rust"))]
    unsafe extern "C" {
        fn tree_sitter_test() -> ::rust_sitter::tree_sitter::Language;
    }
    #[cfg(not(feature = "pure-rust"))]
    pub fn language() -> ::rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[cfg(feature = "pure-rust")]
    include!(concat!(
        env!("OUT_DIR"),
        "/grammar_",
        "test",
        "/parser_",
        "test",
        ".rs"
    ));
    #[cfg(feature = "pure-rust")]
    pub fn language() -> &'static ::rust_sitter::pure_parser::TSLanguage {
        unsafe { &LANGUAGE }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Language`]"]
    #[doc = r" instance containing the parsed structured data."]
    #[cfg(not(feature = "pure-rust"))]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Language, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Language>(input, language)
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Language`]"]
    #[doc = r" instance containing the parsed structured data."]
    #[cfg(feature = "pure-rust")]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Language, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Language>(input, language)
    }
}
